--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <li><a href="./Assignments/Assignment- 49-52/index3.html" target="_blank">Assignment -49-52 </a></li>
         <li><a href="./Assignments/Assignment- 53-57/index1.html" target="_blank">Assignment -53-57 </a></li>
         <li><a href="./Assignments/Assignment- 53-57/index2.html" target="_blank">Assignment -53-57 </a></li>
-        <li><a href="./Assignments/Assignment- 58-67/index.html" target="_blank">Assignment -58-67 </a></li>
+        <li><a href="./Assignments/Assignment-58-67/index.html" target="_blank">Assignment-58-67 </a></li>
+        <li><a href="./Assignments/Assignment-58-67/index1.html" target="_blank">Assignment-58-67 </a></li>
+        
     </ul>
 
      
