--- a/Assignments/Assignment-58-67/index.html
+++ b/Assignments/Assignment-58-67/index.html
@@ -8,52 +8,34 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<h1>  Assignment-No(58-67) , Q1</h1>
+<h1>  Assignment-No(58-67)</h1> 
 
 <div>
-    <h1>DOM</h1>
+    <h2> DOM </h2>
     <div id="form-content" class="content">
-      <label for="first-name">First Name</label>
-      <input type="text" id="first-name" />
-      <label for="last-name">Last Name</label>
-      <input type="text" id="last-name" />
-      <label for="email">Email</label>
-      <input type="text" id="email" />
+    <label for="first-name">First Name</label>
+    <input type="text" id="first-name" />
+    <label for="last-name">Last Name</label>
+    <input type="text" id="last-name" />
+    <label for="email">Email</label>
+    <input type="text" id="email" />
     </div>
     <div id="main-content" class="content">
-      <p class="render">First Name : Alex</p>
-      <p class="render" id="lastName">Last Name: Bank</p>
-      <p class="render">Email : alexbank@example.com</p>
-      <p class="render">Country : Pakistan</p>
-      <p class="render">Contact : +92 300 1234567</p>
+    <p class="render"> First Name : Alex</p>
+    <p class="render" id="lastName">Last Name: Bank</p>
+    <p class="render"> Email : alexbank@example.com</p>
+    <p class="render"> Country : Pakistan </p>
+    <p class="render"> contact : +92 300 1234567</p>
     </div>
-  </div>
-  
-  <script>
-   
-    let mainContent = document.getElementById("main-content");
-  
-    
-    let childElements = mainContent.children;
-    for (let i = 0; i < childElements.length; i++) {
-      console.log(childElements[i]);
-    }
-  
-   
-    let renderElements = document.getElementsByClassName("render");
-    for (let i = 0; i < renderElements.length; i++) {
-      console.log(renderElements[i].innerHTML);
-    }
-  
-   
-    let firstNameInput = document.getElementById("first-name");
-    firstNameInput.value = "Shumaima";
-  
-   
-    let lastNameInput = document.getElementById("last-name");
-    lastNameInput.value = "Fatima";
-  
-    let emailInput = document.getElementById("email");
-    emailInput.value = "shumaimaf@gmail.com";
-  </script>
+
+    <div id="result">
+        <h2>Result</h2>
+        
+    </div>
+    </div>
+
+    <script src="./app.js">
+    </script>
+</body>
+</html>
   
